--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.8.1"
+  },
+  "scripts": {
+    "start": "node server.mjs"
   }
+  
 }
