--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.8.1"
@@ -7,5 +8,4 @@
   "scripts": {
     "start": "node server.mjs"
   }
-  
 }
